GLM4.6 KLD calibration data + kld calibration data used by default

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -67,7 +67,7 @@
                 "# harmonization_technique: 0=disabled, 1=max, 2=mean, 3=min (default)\n",
                 "harmonization_technique = 3    #@param {type:\"integer\"}\n",
                 "\n",
-                "# calibration data filename (\"ppl_results.csv\" or \"ppl_results_partial.csv\" are automatically used by default when empty)\n",
+                "# calibration data filename (\"kld_results.csv\" or \"kld_results_partial.csv\" or \"ppl_results.csv\" or \"ppl_results_partial.csv\" are automatically used by default in this order when empty)\n",
                 "csv_filename = \"\" #@param {type:\"string\"}\n",
                 "\n",
                 "# calibration data qtype (leave empty for auto-selection which will choose the lowest bpw) - list of available qtypes can be found in the calibration data file\n",
@@ -155,13 +155,18 @@
                 "  fi\n",
                 "else\n",
                 "  # CSV filename not provided\n",
-                "  if [ -f \"models/$MODEL_NAME/ppl_results.csv\" ]; then\n",
+                "  if [ -f \"models/$MODEL_NAME/kld_results.csv\" ]; then\n",
+                "    ln -sf \"models/$MODEL_NAME/kld_results.csv\" .\n",
+                "  elif [ -f \"models/$MODEL_NAME/kld_results_partial.csv\" ]; then\n",
+                "    ln -sf \"models/$MODEL_NAME/kld_results_partial.csv\" .\n",
+                "    echo \"⚠️ WARNING: partial calibrated kld_results_partial.csv found for '$MODEL_NAME'; will try to interpolate missing results as best as we can, but this will unlikely produce kld-optimum quant mixes (so please don't use for production) - full calibrated data likely coming soon.\"\n",
+                "  elif [ -f \"models/$MODEL_NAME/ppl_results.csv\" ]; then\n",
                 "    ln -sf \"models/$MODEL_NAME/ppl_results.csv\" .\n",
                 "  elif [ -f \"models/$MODEL_NAME/ppl_results_partial.csv\" ]; then\n",
                 "    ln -sf \"models/$MODEL_NAME/ppl_results_partial.csv\" .\n",
                 "    echo \"⚠️ WARNING: partial calibrated ppl_results_partial.csv found for '$MODEL_NAME'; will try to interpolate missing results as best as we can, but this will unlikely produce ppl-optimum quant mixes (so please don't use for production) - full calibrated data likely coming soon.\"\n",
                 "  else\n",
-                "    echo \"❌ ERROR: ppl_results.csv (and ppl_results_partial.csv) missing; support for '$MODEL_NAME' likely coming soon.\"\n",
+                "    echo \"❌ ERROR: Missing calibration data file *_results.csv; support for '$MODEL_NAME' likely coming soon.\"\n",
                 "    exit 1\n",
                 "  fi\n",
                 "fi\n",
@@ -250,6 +255,15 @@
                 "    echo \"❌ ERROR: File '$CSV_FILENAME' not found.\"\n",
                 "    exit 1\n",
                 "  fi\n",
+                "elif [ -f kld_results.csv ]; then \\\n",
+                "    echo \"Complete pkld_results.csv already exists. Skipping interpolation...\"; \\\n",
+                "    ln -sf kld_results.csv csv_results_to_plot.csv; \\\n",
+                "elif [ -f kld_results_partial.csv ]; then \\\n",
+                "    echo \"Interpolation of kld_results.csv necessary.\"; \\\n",
+                "    ln -sf kld_results_partial.csv csv_results_to_plot.csv; \\\n",
+                "    rm -f kld_results_partial_*interpolated.csv; \\\n",
+                "    python ../../fill_missing_metric.py kld_results_partial.csv; \\\n",
+                "    ln -sf kld_results_partial_*interpolated.csv csv_results_to_plot_inter.csv; \\\n",
                 "elif [ -f ppl_results.csv ]; then \\\n",
                 "    echo \"Complete ppl_results.csv already exists. Skipping interpolation...\"; \\\n",
                 "    ln -sf ppl_results.csv csv_results_to_plot.csv; \\\n",
@@ -388,6 +402,8 @@
                 "            input_file = sorted(partial_files)[0]  # Use the first one alphabetically\n",
                 "        else:\n",
                 "            raise FileNotFoundError(\"No suitable input file found: *_partial_*interpolated.csv\")\n",
+                "elif os.path.isfile(\"kld_results.csv\"):\n",
+                "    input_file = \"kld_results.csv\"\n",
                 "elif os.path.isfile(\"ppl_results.csv\"):\n",
                 "    input_file = \"ppl_results.csv\"\n",
                 "else:\n",
@@ -396,7 +412,7 @@
                 "    if partial_files:\n",
                 "        input_file = sorted(partial_files)[0]  # Use the first one alphabetically\n",
                 "    else:\n",
-                "        raise FileNotFoundError(\"No suitable input file found: ppl_results.csv, *_*interpolated.csv, or *_partial_*interpolated.csv\")\n",
+                "        raise FileNotFoundError(\"No suitable input file found: kld_results.csv, ppl_results.csv, *_*interpolated.csv, or *_partial_*interpolated.csv\")\n",
                 "\n",
                 "cmd = [\"python\", \"../../quant_assign.py\", input_file]\n",
                 "\n",
