--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -142,7 +142,7 @@
                 "    # If the filename ends with \"_interpolated.csv\", try to suggest a matching \"_partial\" file.\n",
                 "    if [[ \"$CSV_FILENAME\" == *_interpolated.csv ]]; then\n",
                 "      base=\"${CSV_FILENAME%_partial*}\"\n",
-                "      suggestion=$(find \"models/$MODEL_NAME\" -maxdepth 1 -type f -name \"${base}*\" | grep -v \"_interpolated.csv\" | grep \"_partial\" | head -n 1)\n",
+                "      suggestion=$(find \"models/$MODEL_NAME\" -maxdepth 1 \\( -type f -o -type l \\) -name \"${base}*\" | grep -v \"_interpolated.csv\" | grep \"_partial\" | head -n 1)\n",
                 "      if [ -n \"$suggestion\" ]; then\n",
                 "        suggestion_name=$(basename \"$suggestion\")\n",
                 "        echo \"⚠️  Hint: It looks like '$CSV_FILENAME' was an auto-generated interpolated file.\"\n",
