Google Colab Greedy-ready

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -73,6 +73,17 @@
                 "# calibration data qtype (leave empty for auto-selection which will choose the lowest bpw) - list of available qtypes can be found in the calibration data file\n",
                 "qtype = \"\"                  #@param {type:\"string\"}\n",
                 "\n",
+                "# Use the greedy priority-queue quant assignment instead of the default method.\n",
+                "use_greedy_quant_assign = False  #@param {type:\"boolean\"}\n",
+                "# Optional path to CSV with quant degradation values (only valid when use_greedy_quant_assign=True).\n",
+                "quant_degradation_csv = \"\"     #@param {type:\"string\"}\n",
+                "# Optional equation to compute degradation from bpw. Only valid when use_greedy_quant_assign=True.\n",
+                "quant_degradation_equation = \"\" #@param {type:\"string\"}\n",
+                "# Synergistic tensors for greedy quant assignment: list-of-lists of regex patterns. Each inner list defines tensors whose losses should be adjusted together. Use \"\" to disable.\n",
+                "synergistic_tensors = [[r\"blk\\..*\\.ffn_up_exps.*\", r\"blk\\..*\\.ffn_gate_exps.*\", r\"blk\\..*\\.ffn_down_exps.*\"]]  #@param {type:\"raw\"}\n",
+                "# Strength of synergy-based loss adjustment (0 = disabled, 1 = fully averaged losses). Only valid when synergistic_tensors is set.\n",
+                "synergy_strength = 0.0          #@param {type:\"number\"}\n",
+                "\n",
                 "# additional flags (advanced and optional)\n",
                 "debug = False               #@param {type:\"boolean\"}\n",
                 "info = False                #@param {type:\"boolean\"}\n",
@@ -417,6 +428,29 @@
                 "\n",
                 "cmd = [\"python\", \"../../quant_assign.py\", input_file]\n",
                 "\n",
+                "# -----------------------------------------------------------------------------\n",
+                "# Mirror quant_assign.py's argument constraints but *do not* raise errors here.\n",
+                "# Instead: silently only include greedy-specific parameters when --use-greedy-quant-assign is True.\n",
+                "# This ensures invalid combinations are simply not passed to quant_assign.py.\n",
+                "# -----------------------------------------------------------------------------\n",
+                "if use_greedy_quant_assign:\n",
+                "    # Add greedy mode flag and only then add greedy-related options when present\n",
+                "    add_flag(cmd, \"use-greedy-quant-assign\", use_greedy_quant_assign)\n",
+                "    if quant_degradation_csv:\n",
+                "        add_flag(cmd, \"quant-degradation-csv\", quant_degradation_csv)\n",
+                "    if quant_degradation_equation:\n",
+                "        add_flag(cmd, \"quant-degradation-equation\", quant_degradation_equation)\n",
+                "    # synergistic_tensors may be an explicit empty string/list to disable; honor that via allow_empty\n",
+                "    if synergistic_tensors is not None:\n",
+                "        add_list_of_list_flag(cmd, \"synergistic-tensors\", synergistic_tensors, allow_empty=True)\n",
+                "        # Only add synergy_strength if synergistic_tensors was provided and non-empty\n",
+                "        # (the helper add_list_of_list_flag treats '' / [] specially when allow_empty=True)\n",
+                "        if synergy_strength and synergistic_tensors not in (None, \"\", []):\n",
+                "            add_flag(cmd, \"synergy-strength\", synergy_strength)\n",
+                "else:\n",
+                "    # Greedy mode disabled: silently ignore greedy-only params (do not add them to cmd)\n",
+                "    pass\n",
+                "# -----------------------------------------------------------------------------\n",
                 "add_flag(cmd, \"tolerance\", tolerance)\n",
                 "add_flag(cmd, \"cpu-irq-k\", cpu_irq_k)\n",
                 "add_flag(cmd, \"gpu-irq-k\", gpu_irq_k)\n",
