Greedy technique support

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -75,7 +75,7 @@
                 "\n",
                 "# Use the greedy priority-queue quant assignment instead of the default method.\n",
                 "use_greedy_quant_assign = False  #@param {type:\"boolean\"}\n",
-                "# Optional path to CSV with quant degradation values (only valid when use_greedy_quant_assign=True).\n",
+                "# Optional path to CSV with quant degradation values. Only valid when use_greedy_quant_assign=True.\n",
                 "quant_degradation_csv = \"\"     #@param {type:\"string\"}\n",
                 "# Optional equation to compute degradation from bpw. Only valid when use_greedy_quant_assign=True.\n",
                 "quant_degradation_equation = \"\" #@param {type:\"string\"}\n",
