Default exponential factor to None

--- a/quant_recipe_pipeline.ipynb
+++ b/quant_recipe_pipeline.ipynb
@@ -52,7 +52,7 @@
                 "cpu_tensors_max_size = \"230\"    #@param {type:\"string\"}\n",
                 "gpu_tensors_max_size = \"95%\"    #@param {type:\"string\"}\n",
                 "tolerance = 0.01                #@param {type:\"number\"}\n",
-                "exponential_factor = 8.0        #@param {type:\"number\"}\n",
+                "exponential_factor = None        #@param {type:\"number\"}\n",
                 "\n",
                 "# assignment override\n",
                 "cpu_assign_qtype = \"\"        #@param {type:\"string\"}\n",
